# Touchdesigner-VinylTimecodeCHOP

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL_INSTRUCTIONS.txt  PRE_RELEASE_CHECKLIST.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md  issues.md  success-config.md  v1.2.0-release-notes.md  video-sync-tutorial.md
examples/: sample.toe
examples/Plugins/VinylTimecodeCHOP.plugin/Contents/: Info.plist
examples/Plugins/VinylTimecodeCHOP.plugin/Contents/MacOS/: VinylTimecodeCHOP
src/VinylTimecodeCHOP/: VinylTimecodeCHOP.cpp  VinylTimecodeCHOP.h
